--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@calblueprint/prettier-config": "^0.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.37.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
