--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@calblueprint/eslint-config-react": "^0.0.3",
@@ -34,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.5"
   }
