--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/supabase/tests"  ],
   "exclude": [
     "node_modules"
   ]
