--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "boostrap": "^2.0.0",
     "dotenv": "^16.3.1",
     "eslint-config-next": "13.5.2",
     "next": "^13.5.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.8"
   },
