--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-native": "^0.72.6",
+    "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
