--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "vitedge": "^0.19.1"
   },
   "devDependencies": {
     "@calblueprint/eslint-config-react": "^0.0.3",
